# CareerLens-AI-Decision-Engine

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  skills-lock.json
ai-service/: .env.example  Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/agents/company_agent/: __init__.py  graph.py
ai-service/app/agents/matching_agent/: __init__.py  graph.py
ai-service/app/agents/profile_agent/: __init__.py  graph.py
ai-service/app/agents/role_agent/: __init__.py  graph.py
ai-service/app/agents/strategy_agent/: __init__.py  graph.py
ai-service/app/core/: config.py
ai-service/app/pipelines/: README.md
ai-service/app/prompts/: README.md
ai-service/app/rag/: README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
data/chroma/: README.md
docs/: DATA_MODEL.md  DEVELOPMENT.md  MVP_ROADMAP.md  PRD.md  PROJECT_STRUCTURE.md  SYSTEM_ARCHITECTURE.md  USER_FLOW.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
prompts/: alignment_engine_foundation.md  architecture_prompt.md  capability_intelligence.md  careerlens_v2_analysis.md  careerlens_v2_docs.md  complete_i18n.md  frontend_api_connection.md  frontend_design_audit.md  frontend_product_ui_refinement.md  frontend_workspace_redesign.md  hiring_signal_foundation.md  i18n_support.md  product_prompt.md  product_validation_integration.md  profile_domain.md  resume_optimization_foundation.md  revision_prompt.md  role_alignment_foundation.md  role_knowledge_foundation.md  talent_intelligence_foundation.md
(+59 files in other folders)
